src/objects/CaseResolution__c.object
<CustomObject>
    <fields>
        <fullName>AcaoGarantiaEstendida__c</fullName>
        <label>Ação</label>
        <picklist>
            <picklistValues>
                <fullName>Acompanhar solução</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enviar para ativo posicionar cliente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ActionAcareacao__c</fullName>
        <label>Ação (Entrega)</label>
        <picklist>
            <picklistValues>
                <fullName>Verificar previsão de entrega abaixo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASSE EXCEÇÃO Refat ainda não autorizado, estamos em negociação interna, se refaturado, será em ROT T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASSE EXCEÇÃO Transp está buscando o produto, se localizado, será devolvido, do contrário, refaturado em ROT T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedido está sendo devolvido, verificar data de devolução abaixo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrega foi realizada | Enviar para ativo confirmar com o cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verificar protocolo de refaturamento já aberto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autorizada exceção da AVARIA PARCIAL | ATIVO ABRA OCORRÊNCIA!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resultado da acareação nas considerações finais:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acompanhar | Aguardar retorno da acareação</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ActionClient__c</fullName>
        <label>Ação</label>
        <picklist>
            <picklistValues>
                <fullName>Posicionamento final - Fechar fluxo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enviar para processamento gerar a troca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enviar para comercial validar similar escolhido pelo cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente decidiu cancelar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ActionCredDevol__c</fullName>
        <label>Ação</label>
        <picklist>
            <picklistValues>
                <fullName>Processar troca ou cancelamento (se for restituição por compra no boleto)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posicionar cliente | Produto enviado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não tem produto | Enviar para análise do comercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ActionDelivery__c</fullName>
        <label>Ação Recontato Entrega</label>
        <picklist>
            <picklistValues>
                <fullName>Verificar previsão de entrega abaixo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASSE EXCEÇÃO Refat ainda não autorizado, estamos em negociação interna, se refaturado, será em ROT T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASSE EXCEÇÃO Transp está buscando o produto, se localizado, será devolvido, do contrário, refaturado em ROT T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedido está sendo devolvido, verificar data de devolução abaixo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrega foi realizada | Enviar para ativo confirmar com o cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verificar protocolo de refaturamento já aberto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autorizada exceção da AVARIA PARCIAL | ATIVO ABRA OCORRÊNCIA!</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ActionErrorSeller__c</fullName>
        <label>Ação</label>
        <picklist>
            <picklistValues>
                <fullName>Posicionar cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não tem produto | Enviar para comercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ActionReturn__c</fullName>
        <label>Ação (Retorno)</label>
        <picklist>
            <picklistValues>
                <fullName>Verificar previsão de entrega abaixo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASSE EXCEÇÃO Refat ainda não autorizado, estamos em negociação interna, se refaturado, será em ROT T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASSE EXCEÇÃO Transp está buscando o produto, se localizado, será devolvido, do contrário, refaturado em ROT T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedido está sendo devolvido, verificar data de devolução abaixo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrega foi realizada | Enviar para ativo confirmar com o cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verificar protocolo de refaturamento já aberto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autorizada exceção da AVARIA PARCIAL | ATIVO ABRA OCORRÊNCIA!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resultado da acareação nas considerações finais</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acompanhar | Aguardar retorno da acareação</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Ação</label>
        <picklist>
            <picklistValues>
                <fullName>Acompanhar solução</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enviar para ativo posicionar cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alterada ocorrência no status restituição estorno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não foi possível alterar a ocorrência</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posição sobre atraso na restituição/estorno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dados enviados para restituição na conta bancária</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divergência nos dados enviados para restituição</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verificar previsão de entrega abaixo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASSE EXCEÇÃO Refat ainda não autorizado, estamos em negociação interna, se refaturado, será em ROT T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASSE EXCEÇÃO Transp está buscando o produto, se localizado, será devolvido, do contrário, refaturado em ROT T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedido está sendo devolvido, verificar data de devolução abaixo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrega foi realizada | Enviar para ativo confirmar com o cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verificar protocolo de refaturamento já aberto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autorizada exceção da AVARIA PARCIAL | ATIVO ABRA OCORRÊNCIA!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endereçço alterado - Conforme solicitado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posicionar cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não tem produto | Enviar para comercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processar troca ou cancelamento (restituição – compra boleto)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente decidiu cancelar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enviar para processamento gerar troca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enviar para comercial validar similar escolhido pelo cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posicionar cliente Produto enviado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verificar previsão de entrega abaixo (PREENCHER A PERGUNTA 2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedido está sendo devolvido, verificar data de devolução abaixo (PREENCHER A PERGUNTA 3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verificar protocolo de refaturamento já aberto (PREENCHER A PERGUNTA 4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autorizada exceção da AVARIA PARCIAL | ATIVO ABRA OCORRÊNCIA! (PREENCHER A PERGUNTA 5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resultado da acareação nas considerações finais (PREENCHER A PERGUNTA 6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acompanhar | Aguardar retorno da acareação</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitado prioridade na expedição | Posicionar cliente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ag_ncia__c</fullName>
        <label>Agência:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AproveReason__c</fullName>
        <label>Motivo da aprovação</label>
        <picklist>
            <picklistValues>
                <fullName>Análise em andamento (transportadora retornou, mas não com retornou com definição e o prazo esgotou)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Com autorização (autorizado pelo departamento de transportes do CD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Com autorização (autorizado pela transportadora)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrega realizada para terceiros (o cliente alega que não recebeu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta de acareação (transportadora se recusa a ir até o cliente para realizar acareação)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta de retorno (transportadora não retorna no prazo acordado)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não autorizado pela transportadora (por algum motivo é re-faturado para atender o cliente)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_solucionadora__c</fullName>
        <label>Área solucionadora</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AtachFile__c</fullName>
        <label>Anexar arquivo</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AuthorizationNumberPosting__c</fullName>
        <label>Número de autorização de postagem</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AuthorizedBy__c</fullName>
        <label>Autorizado por</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AuthorizedRefaturamento__c</fullName>
        <label>Refaturamento autorizado?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim (PREENCHER ATÉ Barrar produto?)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não (PREENCHER E-mail Transportadora e Tipo da nota fiscal refaturamento)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não/ Dados divergentes (PREENCHER Dados que estão divergentes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Autorizado_processar_este_produto__c</fullName>
        <label>Autorizado processar este produto?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BarringProduct__c</fullName>
        <label>Barrar produto?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CarrierEmail__c</fullName>
        <label>E-mail Transportadora</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart_o_Luiza_da_Transportadora_Novo_Prod__c</fullName>
        <label>Cartão Luiza da Transportadora Novo Prod</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart_o_Luiza_da_Transportadora_PTO__c</fullName>
        <label>Cartão Luiza da Transportadora PTO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart_o_Luiza_da_Transportadora_T__c</fullName>
        <label>Cartão Luiza da Transportadora T</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart_o_Luiza_da_Transportadora__c</fullName>
        <label>Cartão Luiza da Transportadora</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Resoluções</relationshipLabel>
        <relationshipName>Resolu_es_de_Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cidade_Novo_Prod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cidade Novo Prod</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Resoluções de Casos (Cidade Novo Prod)</relationshipLabel>
        <relationshipName>Resolu_es_de_Casos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cidade_PTO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cidade PTO</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Resoluções de Casos (Cidade PTO)</relationshipLabel>
        <relationshipName>Resolu_es_de_Casos3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cidade_T__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cidade T</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Resoluções de Casos (Cidade T)</relationshipLabel>
        <relationshipName>Resolu_es_de_Casos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cidade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cidade</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Resoluções de Casos</relationshipLabel>
        <relationshipName>Resolu_es_de_Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente_aceitou_sug_de_produto_similar__c</fullName>
        <label>Cliente aceitou sug de produto similar ?</label>
        <picklist>
            <picklistValues>
                <fullName>Escolheu outro produto similar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deseja trocar ou cancelar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deseja esperar o mesmo produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cliente_deseja__c</fullName>
        <label>Cliente deseja?</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelar com pagamento via cartão | Ativo gerar cancelamento ML Admin | Fechar fluxo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trocar | Ativo gerar troca ML Admin e enviar para processar venda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelar com pagamento via boleto/débito on | Enviar dados para restituição</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Codigo_do_item_correto__c</fullName>
        <label>Código do item correto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentsCredDevol__c</fullName>
        <label>Observações (CredDevol)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsIssueNF__c</fullName>
        <label>Observações(Emissão NF)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Observações</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConfirmationComments__c</fullName>
        <label>Observações confirmação</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conseguiu_contato_com_clienteProcess__c</fullName>
        <label>Conseguiu contato com cliente?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não | Enviar e-mail com posição para cliente e fechar fluxo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conseguiu_contato_com_o_cliente_Acomp__c</fullName>
        <label>Conseguiu contato com o cliente? Acomp</label>
        <picklist>
            <picklistValues>
                <fullName>Sim | Solicitar restituição</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não | Enviar e-mail para o cliente com posição e fechar fluxo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conseguiu_contato_com_o_cliente__c</fullName>
        <label>Conseguiu contato com o cliente?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim | Solicitar restituição</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não | Acompanhar para contatar cliente novamente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConsiderationsUnlock__c</fullName>
        <label>Considerações finais</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CorrectItemCode__c</fullName>
        <label>Código do item correto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataThatDivergent__c</fullName>
        <label>Dados que estão divergentes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_de_Inicio__c</fullName>
        <label>Data de Inicio</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DefectiveProductAcareacao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto avariado (Acareação)</label>
        <referenceTo>Order_Item__c</referenceTo>
        <relationshipLabel>Resoluções de Casos (Produto avariado (Acareação))</relationshipLabel>
        <relationshipName>Resolu_es_de_Casos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefectiveProductRecontact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto avariado (Recontato)</label>
        <referenceTo>Order_Item__c</referenceTo>
        <relationshipLabel>Resoluções de Casos (Produto avariado (Recontato))</relationshipLabel>
        <relationshipName>Resolu_es_de_Casos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefectiveProductReturn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto avariado (Retorno)</label>
        <referenceTo>Order_Item__c</referenceTo>
        <relationshipLabel>Resoluções de Casos (Produto avariado (Retorno))</relationshipLabel>
        <relationshipName>Resolu_es_de_Casos3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefectiveProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produto avariado</label>
        <referenceTo>Order_Item__c</referenceTo>
        <relationshipLabel>Resoluções de Casos</relationshipLabel>
        <relationshipName>Resolu_es_de_Casos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliveryAddressChangeAuthorized__c</fullName>
        <label>Alt de endereço da entrega autorizada ?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim | Enviar para transportadora alterar endereço</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não | Suspeita de golpe | Barrar na transportadora</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DifferenceChargedSimilar1__c</fullName>
        <label>Diferença a ser cobrada no similar 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DifferenceChargedSimilar2__c</fullName>
        <label>Diferença a ser cobrada no similar 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DifferenceChargedSimilar3__c</fullName>
        <label>Diferença a ser cobrada no similar 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Empenho_virtual_conclu_do__c</fullName>
        <label>Empenho virtual concluído?</label>
        <picklist>
            <picklistValues>
                <fullName>Sim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enviar_para_processar_venda_Rot_T_Novo_p__c</fullName>
        <label>Enviar para processar venda Rot T?Novopr</label>
        <picklist>
            <picklistValues>
                <fullName>SIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NÂO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enviar_para_processar_venda_Rot_T_T__c</fullName>
        <label>Enviar para processar venda Rot T? T</label>
        <picklist>
            <picklistValues>
                <fullName>Dados divergentes / Enviar para Atendimento verificar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não tem todos os produtos / Enviar para reversa efetuar empenho virtual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcialmente / Enviar para reversa efetuar empenho virtual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sim / Enviar para ativo posicionar cliente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enviar_para_processar_venda_Rot_T__c</fullName>
        <label>Enviar para processar venda Rot T?</label>
        <picklist>
            <picklistValues>
                <fullName>SIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NÂO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ErrorCausedRating__c</fullName>
        <label>Classificação do erro causado</label>
        <picklist>
            <picklistValues>
                <fullName>Erro na cor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro na imagem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro na ficha técnica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro na voltagem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Está faltando acessórios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Descrição errada do produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dimensões</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referência do produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data da promoção anunciada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forma de pagamento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promoções vigentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valor do produto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro de envio - CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Não é erro de anúncio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro no Gemco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erro no cadastro do site Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente não se lembra do e-mail ou senha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problemas com a conta do cliente no site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estado_UF_Novo_Prod__c</fullName>
        <label>Estado (UF) Novo Prod</label>
        <picklist>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estado_UF_PTO__c</fullName>
        <label>Estado (UF) PTO</label>
        <picklist>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>